# src/main/java/com/mytiki/l0_index/features/latest/txn/TxnController.java
@@ -8,9 +8,6 @@ package com.mytiki.l0_index.features.latest.txn;
 import com.mytiki.l0_index.utilities.Constants;
 import com.mytiki.spring_rest_api.ApiConstants;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -33,14 +30,9 @@ public class TxnController {
             operationId = Constants.PROJECT_DASH_PATH +  "-txn-get",
             summary = "Get Transaction",
             description = "Get a deserialized transaction given an app id, address, block hash, and transaction hash",
-            security = @SecurityRequirement(name = "jwt"),
-            responses = @ApiResponse(
-                    responseCode = "200",
-                    content = @Content(schema = @Schema(
-                    anyOf = {TxnAOContents.class, TxnAOOwnership.class, TxnAOConsent.class}
-            ))))
+            security = @SecurityRequirement(name = "jwt"))
     @RequestMapping(method = RequestMethod.GET)
-    public TxnAO<?> getTransaction(
+    public TxnAO getTransaction(
             @PathVariable(name = "id") String id,
             @PathVariable(name = "address") String address,
             @PathVariable(name = "block-hash") String blockHash,
